--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-streamlit
-matplotlib
+streamlit==1.28.1
+numpy>=1.24.3
+matplotlib>=3.7.1
+scipy>=1.10.1
+Pillow>=9.5.0
+librosa>=0.10.1
+sounddevice>=0.4.6
